# math-rs

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: cd.yml  ci.yml
benches/: determinant.rs  matrix-ops.rs  matrix.rs
dev/: package-lock.json  package.json  webpack.config.js
dev/src/: App.vue  index.js  print.js
src/: equality.rs  identities.rs  lib.rs  num_types.rs  result.rs  traits.rs
src/arithmetics/: euclid.rs  mod.rs
src/ffi/wasm/: mod.rs  result.rs
src/field/: mod.rs  rationals.rs
src/fields/: mod.rs
src/matrix/: arith.rs  display.rs  error.rs  gauss.rs  macros.rs  mod.rs  ops.rs  parser.rs  traits.rs
src/matrix/float/: arith.rs  display.rs  f32.rs  inverse.rs  mod.rs  parser.rs
src/matrix/generic/: arith.rs  display.rs  macros.rs  mod.rs  ops.rs  parser.rs
src/matrix/square/: determinant.rs  dimension.rs  equality.rs  inverse.rs  lu.rs  mod.rs  parser.rs
src/matrix/square/determinant/: bareiss.rs  gaussian.rs  mod.rs  montante.rs  ring.rs
src/polynomial/: arith.rs  display.rs  mod.rs  newton.rs  scalar.rs  serde.rs  zeroes.rs
src/structures/: complex.rs  errors.rs  integers.rs  mod.rs  rationals.rs  reals.rs
src/traits/: mod.rs
