[package]
name = "mathrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.3.0"
wasm-bindgen = "0.2.84"
tracing = "0.1.37"
tracing-wasm = "0.2.1"