[package]
name = "math-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A basic mathematical engine"
homepage = "math-rs.rs"
readme = "readme"
repository = "https://github.com/VikSa666/mathrs"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.3.0"
wasm-bindgen = "0.2.84"
tracing = "0.1.37"
tracing-wasm = "0.2.1"